# rust-wallet-sdk

./: Cargo.toml  LICENSE  README.md
crates/coin-base/: Cargo.toml
crates/coin-base/src/: common.rs  error.rs  lib.rs  wallet.rs
crates/coin-eth/: Cargo.toml
crates/coin-eth-wasm/: Cargo.toml
crates/coin-eth-wasm/src/: lib.rs
crates/coin-eth/src/: lib.rs
crates/coin-sol/: Cargo.toml
crates/coin-sol-wasm/: Cargo.toml
crates/coin-sol-wasm/src/: lib.rs
crates/coin-sol/src/: lib.rs
