[workspace]
resolver = "2"
members = [
    "crates/coin-base",
    "crates/coin-eth",
    "crates/coin-sol",
    "crates/coin-eth-wasm",
    "crates/coin-sol-wasm",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
