[package]
name = "coin-eth-wasm"
version = "0.1.0"
edition = "2021"
description = "Ethereum wallet WASM bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
coin-eth = { path = "../coin-eth" }
coin-base = { path = "../coin-base" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
